fix mobile promo banner spacing

--- a/src/assets/scss/components/_promoBanner.scss
+++ b/src/assets/scss/components/_promoBanner.scss
@@ -10,6 +10,10 @@
 			font-size: 2.75rem;
 		}
 	}
+	&-slide {
+		flex: 1 0 75%;
+		padding-right: $spacer;
+	}
 	&-nav {
 		.prev,
 		.next {
